jdk16+zgc+UseStringDeduplication